# src/main/resources/static/openapi.yaml
@@ -36,7 +36,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ProductRequest'
+              $ref: '#/components/schemas/AddProductRequest'
       responses:
         '201':
           description: Product created successfully
@@ -46,7 +46,7 @@ paths:
                 $ref: '#/components/schemas/ProductResponse'
 components:
   schemas:
-    ProductRequest:
+    AddProductRequest:
       type: object
       required:
         - name
